tests/snapshots/test_lifecycle__deprecate_clause_superseded_fails.snap
---
source: tests/lifecycle_tests/clause.rs
expression: snapshot
---
$ govctl rfc new Supersede Then Deprecate RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl clause new RFC-0001:C-OLD Old Clause -s Specification -k normative
Created clause: gov/rfc/RFC-0001/clauses/C-OLD.toml
  Added to section 'Specification', path: clauses/C-OLD.toml
exit: 0

$ govctl clause new RFC-0001:C-NEW New Clause -s Specification -k normative
Created clause: gov/rfc/RFC-0001/clauses/C-NEW.toml
  Added to section 'Specification', path: clauses/C-NEW.toml
exit: 0

$ govctl clause supersede RFC-0001:C-OLD --by RFC-0001:C-NEW --force
Superseded clause: RFC-0001:C-OLD
  Replaced by: RFC-0001:C-NEW
exit: 0

$ govctl clause deprecate RFC-0001:C-OLD --force
error[E0209]: Clause is superseded, cannot deprecate. Superseded is terminal; there are no valid transitions (RFC-0001:C-OLD)
exit: 1
