tests/snapshots/test_lifecycle__deprecate_legacy_json_clause_requires_migrate.snap
---
source: tests/lifecycle_tests/clause.rs
expression: snapshot
---
$ govctl clause deprecate RFC-0001:C-TEST --force
error[E0505]: Legacy JSON clause exists for RFC-0001:C-TEST; use govctl <0.9 to run `govctl migrate` before upgrading. (RFC-0001:C-TEST)
exit: 1
