tests/snapshots/test_lifecycle__finalize_already_normative_fails.snap
---
source: tests/lifecycle_tests/rfc_cases/finalize.rs
expression: snapshot
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc finalize RFC-0001 normative
Finalized RFC-0001 to status: normative
exit: 0

$ govctl rfc finalize RFC-0001 normative
error[E0104]: Invalid status transition: normative -> normative. Valid transition from normative: deprecated (RFC-0001)
exit: 1
