tests/snapshots/test_lifecycle__finalize_draft_to_deprecated.snap
---
source: tests/lifecycle_tests/rfc_cases/finalize.rs
expression: snapshot
---
$ govctl rfc new Obsolete RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc finalize RFC-0001 deprecated
error: invalid value 'deprecated' for '<STATUS>'
  [possible values: normative]

For more information, try '--help'.
exit: 2

$ govctl rfc list
[
  {
    "id": "RFC-0001",
    "version": "0.1.0",
    "status": "draft",
    "phase": "spec",
    "title": "Obsolete RFC"
  }
]
exit: 0
