tests/snapshots/test_lifecycle__finalize_legacy_json_rfc_requires_migrate.snap
---
source: tests/lifecycle_tests/rfc_cases/finalize.rs
expression: snapshot
---
$ govctl rfc finalize RFC-0001 normative
error[E0505]: Legacy JSON RFC exists for RFC-0001; use govctl <0.9 to run `govctl migrate` before upgrading. (RFC-0001)
exit: 1
