tests/snapshots/test_lifecycle__finalize_normative_to_deprecated.snap
---
source: tests/lifecycle_tests/rfc_cases/finalize.rs
expression: snapshot
---
$ govctl rfc new Old RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc finalize RFC-0001 normative
Finalized RFC-0001 to status: normative
exit: 0

$ govctl rfc deprecate RFC-0001 --force
Finalized RFC-0001 to status: deprecated
exit: 0

$ govctl rfc list
[
  {
    "id": "RFC-0001",
    "version": "0.1.0",
    "status": "deprecated",
    "phase": "spec",
    "title": "Old RFC"
  }
]
exit: 0
