tests/snapshots/test_lifecycle__reject_proposed_adr.snap
---
source: tests/lifecycle_tests/adr.rs
expression: snapshot
---
$ govctl adr new Bad Decision
Created ADR: gov/adr/ADR-XXXX-bad-decision.toml
exit: 0

$ govctl adr reject ADR-0001
Rejected ADR: ADR-0001
exit: 0

$ govctl adr list
[
  {
    "id": "ADR-0001",
    "status": "rejected",
    "date": "<DATE>",
    "title": "Bad Decision"
  }
]
exit: 0
