tests/snapshots/test_lifecycle__supersede_clause.snap
---
source: tests/lifecycle_tests/clause.rs
expression: snapshot
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl clause new RFC-0001:C-OLD Old Clause -s Specification -k normative
Created clause: gov/rfc/RFC-0001/clauses/C-OLD.toml
  Added to section 'Specification', path: clauses/C-OLD.toml
exit: 0

$ govctl clause new RFC-0001:C-NEW New Clause -s Specification -k normative
Created clause: gov/rfc/RFC-0001/clauses/C-NEW.toml
  Added to section 'Specification', path: clauses/C-NEW.toml
exit: 0

$ govctl rfc finalize RFC-0001 normative
  Set C-NEW.since = 0.1.0
  Set C-OLD.since = 0.1.0
Finalized RFC-0001 to status: normative
exit: 0

$ govctl clause supersede RFC-0001:C-OLD --by RFC-0001:C-NEW
Supersede RFC-0001:C-OLD with RFC-0001:C-NEW? [y/N] 
Supersede cancelled
exit: 0

$ govctl clause list
[
  {
    "id": "C-NEW",
    "rfc_id": "RFC-0001",
    "kind": "normative",
    "status": "active",
    "title": "New Clause"
  },
  {
    "id": "C-OLD",
    "rfc_id": "RFC-0001",
    "kind": "normative",
    "status": "active",
    "title": "Old Clause"
  }
]
exit: 0
